# cocos2dx-store

./: .gitignore  .gitmodules  CMakeLists.txt
Soomla/: CCSoomlaStore.cpp  CCStoreConsts.cpp  CCStoreConsts.h  CCStoreEventDispatcher.cpp  CCStoreEventDispatcher.h  CCStoreEventHandler.h  CCStoreInventory.cpp  CCStoreInventory.h  CCStoreService.cpp  CMakeLists.txt
Soomla/data/: CCStoreInfo.cpp  CCStoreInfo.h
Soomla/domain/: CCMarketItem.cpp
android/jni/: Android.mk
soomla-native/compilations/android/: build.gradle
soomla-native/projects/cocos2dx-android-store/: AndroidManifest.xml  build.gradle
soomla-native/projects/cocos2dx-ios-store/Cocos2dXiOSStore.xcodeproj/project.xcworkspace/xcshareddata/: Cocos2dXiOSStore.xccheckout
